--- a/index.html
+++ b/index.html
@@ -15,16 +15,18 @@
         </div>
         <section class="task-area">
             <div class="task-tabs">
+                <div id="underline"></div>
                 <ul>
-                    <li class="on">모두</li>
-                    <li>진행중</li>
-                    <li>완료</li>
+                    <li id="all">모두</li>
+                    <li id="ing">진행중</li>
+                    <li id="end">완료</li>
                 </ul>
             </div>
             <div class="task-list" id="task-board"></div>
         </section>
     </div>
     
+    <script src="https://kit.fontawesome.com/c0c444ebec.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
