--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="container">
         <h1>TO DO LIST</h1>
         <div class="input-area">
-            <input type="text" id="task-input">
-            <button id="add-button">ADD</button>
+            <input type="text" id="task-input" placeholder="할 일을 추가해 주세요.">
+            <button id="add-button">추가</button>
         </div>
         <section class="task-area">
             <div class="task-tabs">
